# WaveTransformer

./: .gitignore  CMakeLists.txt  README.md
WaveTransformer/: Algo.cpp  CMakeLists.txt  WaveFile.cpp  main.cpp
WaveTransformer/include/: Algo.h  InputParser.h  Options.h  WaveFile.h
